# to_do_list

./: .coverage  .env  Dockerfile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 9cd836b1ce2f_criando_a_tabela_de_tarefas.py  c7c2fe24c9af_criar_tabela_de_usuario.py
tests/: conftest.py  test_app.py  test_autenticacao.py  test_db.py  test_tarefas.py
to_do_list/: app.py  database.py  models.py  schemas.py  security.py  settings.py
to_do_list/routers/: autenticacao.py  tarefas.py
